--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,48 @@ html, body {
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+/* navbar */
+
+nav {
+    position: fixed;
+    right: 0;
+    top: 0;
+}
+
+nav > #handle
+{
+    position: relative;
+    color: whitesmoke;
+    z-index: 1;
+    margin-right: 0.5rem;
+    margin-top: 0.3rem;
+    padding: 0.4rem;
+    cursor: pointer;
+    user-select: none;
+}
+
+nav.open > .side {
+   transform: translateX(0%); 
+}
+
+nav > .side {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 250px;
+    padding: 1rem;
+    padding-top: 2rem;
+    transform: translateX(100%);
+    background-color: rgba(15, 15, 15, 1);
+    transition: transform 250ms ease-out 0s;
+}
+
+nav > .side > .container {
+    color: whitesmoke;
+}
+
+nav > .side > .container input {
+    margin-bottom: 1.3rem;
+}
